Issue #131: Allow content to fill screen on mobile.

--- a/app/sass/originalTheme.scss
+++ b/app/sass/originalTheme.scss
@@ -2,3 +2,11 @@ body {
   padding-top: 50px;
   overflow-x: hidden;
 }
+.col-xs-7 {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .col-md-9 {
+    width: 75%;
+  }
+}
